<resources>
    <string name="app_name">自动登录华交校园网</string>
    <string name="title_activity_main">自动登录华交校园网</string>
    <string name="label_account">学号：</string>
    <string name="editbox_account_hint">请输入学号</string>
    <string name="label_password">密码：</string>
    <string name="editbox_password_hint">请输入智慧交大密码</string>
    <string name="label_ISP">运营商：</string>
    <string name="button_登录_文本">登录</string>
    <string name="button_立即保存账号信息_文本">立即保存账号信息</string>
    <string name="label_txt">说明：\n第一次使用请输入账号、密码并且选择运营商，然后点击“立即保存账号信息”\n然后，您可以把本软件放在您的主屏幕。到了您需要连接校园网时，您只需要先按下Home键然后打开本软件，软件会自动点击本软件内的登录按钮并且告知您结果(如果没有反应或出现意外，请您手动再点一下)，然后您就可以直接退出本程序，校园网登录就完成了。\n(注：系统的wifi状态可能不会马上刷新，如果本软件显示成功，哪怕系统显示的wifi图标仍为感叹号，也是能正常联网的)\n软件作者：XY0797\n当前版本：v2.0\n发布日期：2023.10.9\n开源地址：https://github.com/XY0797/ECJTUsWLANAutoLogin\n开源协议：GPLv3</string>
</resources>